# voiange

./: .env.example  .gitignore  README.md  package.json
.github/workflows/: ci.yml
apps/desktop/: electron.vite.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/desktop/src/main/: index.ts
apps/desktop/src/main/ipc/: register-ipc.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: index.html
backend/: README.md  pyproject.toml  requirements.txt
backend/src/voiceai_backend/: main.py
backend/src/voiceai_backend/api/: __init__.py  app.py  dependencies.py  routes.py
backend/src/voiceai_backend/config/: settings.py
backend/src/voiceai_backend/core/: enums.py  schemas.py
backend/src/voiceai_backend/datasets/: manager.py  schemas.py
backend/src/voiceai_backend/hardware/: detector.py  manager.py  schemas.py
backend/src/voiceai_backend/jobs/: runner.py  store.py
backend/src/voiceai_backend/logging/: setup.py
backend/src/voiceai_backend/models/: manager.py  schemas.py
backend/src/voiceai_backend/pipelines/audio/: manager.py  schemas.py
backend/src/voiceai_backend/pipelines/inference/: manager.py  schemas.py
backend/src/voiceai_backend/pipelines/training/: manager.py  schemas.py
backend/src/voiceai_backend/rpc/: server.py
backend/src/voiceai_backend/storage/: json_store.py
docs/: voiceai-studio-architecture.md  voiceai-studio-folder-structure.md  voiceai-studio-prd.md
scripts/db/: README.md
scripts/dev/: README.md
scripts/packaging/: README.md
scripts/setup/: README.md
scripts/windows/: README.md
(+18 files in other folders)
