[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceai-backend"
version = "0.1.0"
description = "Local Python backend for VoiceAI Studio"
requires-python = ">=3.11"
dependencies = [
  "huggingface_hub>=0.33.0",
  "pydantic>=2.11.7",
  "soundfile>=0.13.1",
  "torch>=2.7.1",
  "torchaudio>=2.7.1"
]

[tool.setuptools.packages.find]
where = ["src"]
